# datafusion-fiddle

./: Cargo.toml  justfile  package.json  pnpm-lock.yaml  samconfig.toml  template.yaml
api/: channel.rs  core.rs  lambda.rs  main.rs
components/: PartitionsPerTaskSelect.tsx  PartitionsSelect.tsx
scripts/: deploy.sh
src/: App.tsx  ResultVisualizer.tsx  useApi.ts
